--- a/Css/style.css
+++ b/Css/style.css
@@ -56,5 +56,43 @@ body {
 .input-control.error {
     color: #ff3860;
     font-size: 9px;
-    height: 13px;
+    height: 70px;
 }
+nav a {
+    line-height: 3rem;
+    padding: 0 1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+  }
+  
+  #top-menu a:hover {
+    background-color: var(--sub-menu-bg);
+  }
+  header, #top-menu {
+	position: relative;
+}
+#top-menu {
+	z-index: 20;
+}
+:root {
+    --main-bg: #4a4e4d;
+    --top-menu-bg: #0e9aa7;
+    --sub-menu-bg: #3da4ab;
+  }
+  nav a.active {
+	background-color: var(--sub-menu-bg);
+	color: var(--main-bg);
+}
+.flex-ctr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .flex-around {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
